SIB-134 CoinGeckoCommunicator - implement getHistoricalListing method - implement getCurrentListing method - implement getCoinInfo method